--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/style.css">
-        <link rel="stylesheet" href="./css/solutions.css">
+        <!-- <link rel="stylesheet" href="./css/solutions.css"> -->
         <link rel="stylesheet" href="./css/student-solution.css">
         <meta charset="utf-8">
         <title>Effects and other stuff</title>
@@ -181,9 +181,7 @@
                         <a href="#" class="ex-12-button">
                             <div class="ex-12-top-white"></div>
                             Test
-                            <div class="ex-12-bottom-white">
-
-                            </div>
+                            <div class="ex-12-bottom-white"></div>
                         </a>
                     </div>
                 </div>
